...
    }




    let mainCatsStrings = [
        "Autos, Fahrzeuge",
        "Immobilien",
        "Tiere",
        "Haushalt, Möbel",
        "Jobs, Stellenangebote",
        "Dienstleistungen, Service",
        "Baby, Kind",
...
        "Garten, Pflanzen",
        "Antiquitäten, Kunst",
        "Flirt & Abenteuer"
        
]
    let cats = [
        ["Alles in Autos, Fahrzeuge", "Auto", "Motorrad", "Reifen", "LKW"],
        ["Alles in Immobilien", "Wohnung", "Haus", "Ferienwohnungen"],
        ["Alles in Tiere", "Tierzubehör", "Hunde", "Katzen", "Pferde", "Reitbeteiligung & Pferdebox", "Fische"],
        ["Alles in Haushalt, Möbel", "Haushaltsgeräte", "Sofas, Sessel, Couch", "Möbel", "Schrank", "Lampen & Licht", "Wohnzimmer", "Schlafzimmer", "Küchenmöbel"],
        ["Alles in Jobs, Stellenangebote", "Bau", "Haushaltshilfe", "Selbstständige", "Informationstechnologie", "Gesundheit & Medizin"],
        ["Alles in Dienstleistungen, Service", "Haushaltsauflösung", "Alles Mögliche"],
        ["Alles in Baby, Kind", "Kinderwagen", "Babykleidung", "Spielzeug"],
...
