...
        insertButton.frame = insertButtonFrame
        insertButton.backgroundColor = UIColor.white
        insertButton.layer.cornerRadius = insertButtonFrame.height/2
        insertButton.layer.borderColor = UIColor(red: 217/255, green: 217/255, blue: 217/255, alpha: 1).cgColor
        insertButton.layer.borderWidth = 1
        self.view.addSubview(insertButton)
        insertButton.setImage(UIImage(named: "insert"), for: UIControlState.normal)
        insertButton.addTarget(self, action: #selector(insertButtonAction), for: UIControlEvents.touchUpInside)
        
        self.view.layoutIfNeeded()
    }

    func insertButtonAction() {
...
