...
        imageCollectionView.reloadData()
        titleTextField.text = ""
        descriptionTextView.text = ""
        priceTextField.text = ""
        priceTypeTextField.text = "Festpreis"
        adTypeTextField.text = "Angebot"
        categoryLabel.text = "Bitte wählen Sie ein Kategorie"
        categoryLabel.textColor = UIColor.lightGray
        independentFieldLabel.text = ""
        dependentFieldLabel.text = ""
        customFields.removeAll()
        listing = Listing()
        tableView.reloadData()
...
